--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-Flask==0.10.1
-Flask-Migrate==1.8.0
-Flask-SQLAlchemy==2.1
-Flask-Script==2.0.5
-Jinja2==2.8
-Mako==1.0.4
-MarkupSafe==0.23
-SQLAlchemy==1.0.12
-Werkzeug==0.11.5
 alembic==0.8.5
 click==6.6
 decorator==4.0.9
+Flask==0.10.1
+Flask-Migrate==1.8.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
 geocoder==1.12.0
+geopy==1.11.0
 gunicorn==19.4.5
 itsdangerous==0.24
-psycopg2==2.5
-pygobject==3.14.0
+Jinja2==2.8
+Mako==1.0.4
+MarkupSafe==0.23
+psycopg2==2.6.1
 python-editor==1.0
-ratelim==0.1.6
 requests==2.9.1
 six==1.10.0
-tornado==3.2.1
+SQLAlchemy==1.0.12
+Werkzeug==0.11.5
